# ECG_Chest_Patch

./: .gitignore  CMakeLists.txt  README.md  ncs.code-workspace  nrf52dk_nrf52832.overlay  prj.conf
demo/: ble_data.py  ble_data2.py  ble_demo.py  demo.py  demo_rand.py  pyserial-ECG.py  pyserial-accel.py  pyserial-combined.py  serial_data.py  test.py  window.ui
include/: ble_service.h  lsm6dsm.h  max30003.h  spi_config.h  utils.h
src/: ble_service.c  lsm6dsm.c  main.c  max30003.c  max30003.cpp  max30003.h  max30003_zephyr.h  spi_config.c
testing/unit_test_suite/: CMakeLists.txt  prj.conf  testcase.yaml
testing/unit_test_suite/src/: main.c
